--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -25,6 +25,8 @@
 <link rel="stylesheet" type="text/css" href="{% static "css/animate.css" %}" />
 <link rel="stylesheet" type="text/css" href="{% static "css/elements.css" %}" />
 <link rel="stylesheet" type="text/css" href="{% static "css/hydroshare_core.css" %}" />
+<link href="{{ STATIC_URL }}css/identifiers.css" rel="stylesheet"/>
+<link href="{{ STATIC_URL }}css/academicons.min.css" rel="stylesheet"/>
 <link rel="stylesheet" type="text/css" href="{% static "css/hydroshare_extends.css" %}" />
 <link rel='stylesheet' type='text/css' href='{% static 'css/jquery-ui/smoothness/jquery-ui.css' %}' />
 {% if request.user.is_staff %}
