--- a/theme/templates/resource-landing-page/coverage.html
+++ b/theme/templates/resource-landing-page/coverage.html
@@ -2,7 +2,7 @@
     <div class="col-xs-12 content-block">
         <div class="row">
             <div class="col-xs-12">
-                <h3>Coverage</h3>
+                <h3>Resource Level Coverage</h3>
             </div>
             <div class="col-xs-12 content-block">
                 <div class="row">
