Make some non-unique ids unique for input fields. For fields whose ids are hard to remove, just delete the ids.

--- a/theme/templates/resource-landing-page/subject.html
+++ b/theme/templates/resource-landing-page/subject.html
@@ -36,7 +36,7 @@
             <fieldset>
                 <div id="div_id_value" class="control-group">
                     <div class="controls">
-                        <input class="form-control input-sm textInput" id="id_value" maxlength="500" name="value"
+                        <input class="form-control input-sm textInput" id="id_subject_keyword_control_input" maxlength="500" name="value"
                                type="text" style="display: none;">{{ cm.keywords_string }}
                     </div>
                 </div>
