Profile badge layout adjustments

--- a/theme/templates/resource-landing-page/resource-header.html
+++ b/theme/templates/resource-landing-page/resource-header.html
@@ -89,7 +89,7 @@
                 </div>
                 <div>
                     <br>
-                    <h4 class="text-muted"><span data-organization></span> | <span
+                    <h4><span data-organization></span> | <span
                             data-title></span>
                     </h4>
                     <div class="text-muted">Subject Areas:</div>
