--- a/theme/templates/resource-landing-page/resource-header.html
+++ b/theme/templates/resource-landing-page/resource-header.html
@@ -1,7 +1,7 @@
 {% load hydroshare_tags %}
 
 {% if not metadata_form %}
-<div class="col-xs-12">
+<div class="col-xs-6">
     <table class="info-table">
         <tr><th>Authors:</th><td id="authors">
             {% for cr in creators %}
@@ -41,6 +41,37 @@
         <tr><th>Resource type:</th><td>{{ cm|resource_type }}</td></tr>
         <tr><th>Created:</th><td>{{ cm.created|date:"M d, Y" }} at {{ cm.created|time }}</td></tr>
         <tr><th>Last updated:</th><td> {{ cm.updated|date:"M d, Y" }} at {{ cm.updated|time }} by {% if cm.last_changed_by %}{{ cm.last_changed_by|contact }}{% endif %}</td></tr>
+    </table>
+</div>
+<div class="col-xs-6">
+    <table class="info-table">
+        <tr>
+            <td><img src="{{ STATIC_URL }}img/public.png" alt="Public Resource"/></td>
+            <td><strong>Sharing Status: </strong>Public</td>
+        </tr>
+        <tr>
+            <td class="text-center"><i class="fa fa-eye" aria-hidden="true"></i></td>
+            <td><strong>Views: </strong>1,835</td>
+        </tr>
+        <tr>
+            <td class="text-center"><i class="fa fa-cloud-download" aria-hidden="true"></i></td>
+            <td><strong>Downloads: </strong>201</td>
+        </tr>
+        <tr>
+            <td class="text-center"><i class="fa fa-thumbs-o-up" aria-hidden="true"></i></td>
+            <td><strong>+1 Votes: </strong>0</td>
+        </tr>
+        <tr>
+            <td class="text-center"><i class="fa fa-comments" aria-hidden="true"></i></td>
+            <td>
+                <strong>Comments: </strong>0
+                <a href="#" style="margin-left: 20px;">Discuss this resource</a>
+            </td>
+        </tr>
+        <tr>
+            <td class="text-center"><i class="fa fa-quote-right" aria-hidden="true"></i></td>
+            <td><a href="#">Cite this resource</a></td>
+        </tr>
     </table>
 </div>
 <!-- Modal -->
