--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -672,8 +672,7 @@
                                     </div>
                                 </div>
                                 <div class="fb-content-wrapper">
-
-                                    <div class="col-xs-12 col-md-8 h-100" style="padding: 0;">
+                                    <div class="col-xs-12 col-md-8 h-100">
                                         <div class="fb-dropzone-wrapper">
                                             <form id="hsDropzone"
                                                   class="files-container ui-widget-content {% if page.perms.change and metadata_form %}dropzone{% endif %}"
